--- a/pages/users.html
+++ b/pages/users.html
@@ -42,16 +42,13 @@
             <thead>
               <tr>
                 <th>Full Name</th>
-                <th>Username</th>
                 <th>Email</th>
-                <th>Status</th>
-                <th>Created On</th>
-                <th>Last Updated On</th>
+                <th>Role</th>
                 <th style="text-align: center; padding-left: 0px;">Action</th>
               </tr>
             </thead>
             <tbody>
-              <tr data-user-id="1">
+              <!-- <tr data-user-id="1">
                 <td>Admin</td>
                 <td>admin</td>
                 <td>admin@bookify.com</td>
@@ -134,7 +131,7 @@
                     </div>
                   </div>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
@@ -155,6 +152,7 @@
   </div>
 
   <script src="/js/admin.js"></script>
+  <script src="../js/userActions.js" type="module"></script>
 </body>
 </html>
 
