--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - E-commerce Platform</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <script type="module" src="/js/loginAction.js"></script>
 </head>
 <body>
   <div class="login-container">
@@ -18,10 +19,12 @@
       </div>
       <form id="login-form">
         <div class="form-group">
-          <input type="email" id="email" placeholder="Email" required>
+          <input type="email" id="email" placeholder="Email" >
+          <span class="error-message" id="email-error"></span>
         </div>
         <div class="form-group">
-          <input type="password" id="password" placeholder="Password" required>
+          <input type="password" id="password" placeholder="Password" >
+          <span class="error-message" id="password-error"></span>
         </div>
         <div class="forgot-password">
           <a href="/pages/forgot-password.html">Forgot Password?</a>
