--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -6,19 +6,19 @@
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="/css/admin-styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="/js/components.js"></script>
+  <script src="/js/include-components.js"></script>
 </head>
 <body>
-  <!-- header  -->
+  <!-- Include header component -->
   <div data-include="/components/header.html"></div>
 
   <div class="admin-container">
-    <!-- sidebar -->
+    <!-- Include sidebar component -->
     <div data-include="/components/sidebar.html"></div>
 
-    <!-- main content -->
+    <!-- Main content area -->
     <main class="admin-content">
-      <!-- Content will be loaded here -->
+      <!-- Content will be loaded dynamically -->
     </main>
   </div>
 
