--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - E-commerce Platform</title>
   <link rel="stylesheet" href="/css/styles.css">
-  <script type="module" src="/js/loginAction.js"></script>
 </head>
 <body>
   <div class="login-container">
@@ -14,17 +13,15 @@
     </div>
     <div class="login-form-container">
       <div class="login-logo">
-        <img src="/assets/imgs/2591708.png" alt="Logo">
+        <img src="/assets/2591708.png" alt="Logo">
         <h2>Sign In</h2>
       </div>
       <form id="login-form">
         <div class="form-group">
-          <input type="email" id="email" placeholder="Email" >
-          <span class="error-message" id="email-error"></span>
+          <input type="email" id="email" placeholder="Email" required>
         </div>
         <div class="form-group">
-          <input type="password" id="password" placeholder="Password" >
-          <span class="error-message" id="password-error"></span>
+          <input type="password" id="password" placeholder="Password" required>
         </div>
         <div class="forgot-password">
           <a href="/pages/forgot-password.html">Forgot Password?</a>
