--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Exclusive | Home</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <script src="main.js" type="module"></script>
+  <script src="./js/homeAction.js" type="module"></script>
 </head>
 <body>
   <!-- Top Banner -->
@@ -14,31 +14,31 @@
     Summer Sale For All Swim Suits And Free Express Delivery - OFF 50%!
     <a href="#">Shop Now</a>
   </div>
-
+  <header id="header"></header>
   <!-- Header -->
-  <header class="header flex space-between align-center wrap">
-    <div class="logo">Exclusive</div>
-    <nav class="nav-links flex wrap">
-      <a href="#" class="active">Home</a>
-      <a href="#">Contact</a>
-      <a href="#">About</a>
-      <a href="#">Sign Up</a>
-    </nav>
-    <div class="search-container flex align-center">
-      <input type="text" placeholder="What are you looking for?" />
-      <i class="fas fa-search"></i>
-    </div>
-    <div class="icons flex align-center">
-      <i class="far fa-heart"></i>
-      <div class="cart-icon relative">
-        <i class="fas fa-shopping-cart"></i>
-        <span class="badge">2</span>
+    <!-- <header class="header flex space-between align-center wrap">
+      <div class="logo">Exclusive</div>
+      <nav class="nav-links flex wrap">
+        <a href="#" class="active">Home</a>
+        <a href="#">Contact</a>
+        <a href="#">About</a>
+        <a href="#">Sign Up</a>
+      </nav>
+      <div class="search-container flex align-center">
+        <input type="text" placeholder="What are you looking for?" />
+        <i class="fas fa-search"></i>
       </div>
-      <div class="user-icon">
-        <i class="fas fa-user"></i>
+      <div class="icons flex align-center">
+        <i class="far fa-heart"></i>
+        <div class="cart-icon relative">
+          <i class="fas fa-shopping-cart"></i>
+          <span class="badge">2</span>
+        </div>
+        <div class="user-icon">
+          <i class="fas fa-user"></i>
+        </div>
       </div>
-    </div>
-  </header>
+    </header> -->
 
   <!-- Hero Section -->
   <section class="hero flex align-center space-between wrap">
@@ -55,25 +55,24 @@
   <!-- Categories -->
   <section class="categories">
     <h2 class="section-title">Shop by Category</h2>
-     
-    <div class="category-grid grid">
+    <div class="category-grid grid" id="categories-container">
 
-      <div class="category-card">
-        <img src="assets/categories/category-1.png" alt="Men" />
+      <!-- <div class="category-card">
         <p>Men</p>
       </div>
       <div class="category-card">
-        <img src="assets/categories/category-2.png" alt="Women" />
+
         <p>Women</p>
       </div>
       <div class="category-card">
-        <img src="assets/categories/category-3.png" alt="Kids" />
+
         <p>Kids</p>
       </div>
       <div class="category-card">
-        <img src="assets/categories/category-4.png" alt="Accessories" />
+
         <p>Accessories</p>
       </div>
+       -->
     </div>
       <!-- Arrow buttons beside each other -->
   <div class="arrow-group">
@@ -85,36 +84,19 @@
   <!-- Featured Products -->
   <section class="featured">
     <h2 class="section-title">Featured Products</h2>
-    <div class="product-grid grid">
-      <div class="product-card">
+    <div class="product-grid grid" id="featured">
+      <!-- <div class="product-card">
         <img src="product1.jpg" alt="Product 1" />
         <h3>Summer Shirt</h3>
         <p>$29.99</p>
         <button class="btn">Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="product2.jpg" alt="Product 2" />
-        <h3>Leather Handbag</h3>
-        <p>$49.99</p>
-        <button class="btn">Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="product3.jpg" alt="Product 3" />
-        <h3>Casual Sneakers</h3>
-        <p>$59.99</p>
-        <button class="btn">Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="product4.jpg" alt="Product 4" />
-        <h3>Smart Watch</h3>
-        <p>$89.99</p>
-        <button class="btn">Add to Cart</button>
-      </div>
+      </div> -->
+      
     </div>
   </section>
 
   <!-- Special Offer -->
-  <section class="special-offer flex wrap align-center space-between">
+  <!-- <section class="special-offer flex wrap align-center space-between">
     <div class="offer-text">
       <h2>Special Offer: Up to 70% OFF</h2>
       <p>Don’t miss our biggest discounts of the season!</p>
@@ -122,7 +104,7 @@
     </div>
     <div class="offer-image">
       <img src="special-offer.jpg" alt="Special Offer" />
-    </div>
+    </div> -->
   </section>
 
   <!-- Testimonials -->
