--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - E-commerce Platform</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <script type="module" src="../js/loginAction.js"></script>
 </head>
 <body>
   <div class="login-container">
@@ -13,15 +14,17 @@
     </div>
     <div class="login-form-container">
       <div class="login-logo">
-        <img src="/assets/2591708.png" alt="Logo">
+        <img src="/assets/imgs/2591708.png" alt="Logo">
         <h2>Sign In</h2>
       </div>
       <form id="login-form">
         <div class="form-group">
-          <input type="email" id="email" placeholder="Email" required>
+          <input type="email" id="email" placeholder="Email" >
+          <span class="error-message" id="email-error"></span>
         </div>
         <div class="form-group">
-          <input type="password" id="password" placeholder="Password" required>
+          <input type="password" id="password" placeholder="Password" >
+          <span class="error-message" id="password-error"></span>
         </div>
         <div class="forgot-password">
           <a href="/pages/forgot-password.html">Forgot Password?</a>
@@ -29,7 +32,7 @@
         <button type="submit" class="btn-login">Sign In</button>
       </form>
       <div class="signup-link">
-        <p>Not a Member yet? <a href="/pages/register.html">Sign up</a></p>
+        <p>Not a Member yet? <a href="./register.html">Sign up</a></p>
       </div>
     </div>
   </div>
