--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
     </div>
     <div class="login-form-container">
       <div class="login-logo">
-        <img src="/assets/imgs/2591708.png" alt="Logo">
+        <img src="../assets/2591708.png" alt="Logo">
         <h2>Sign In</h2>
       </div>
       <form id="login-form">
