--- a/pages/Checkout.html
+++ b/pages/Checkout.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Checkout Page</title>
-  <link rel="stylesheet" href="Checkoutstyle.css">
+  <link rel="stylesheet" href="../Checkoutstyle.css">
 </head>
 <body>
   <div class="container">
