--- a/pages/product.html
+++ b/pages/product.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Page</title>
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="../productPage.css">
+  <script src="/js/productsAction.js" type="module"></script>
 </head>
 <body>
-
+  <header id="header"></header>
   <div class="page-wrapper">
     
     <div class="product-container">
@@ -29,58 +31,7 @@
           <button class="decrement">-</button>
           <input type="text" value="2">
           <button class="increment">+</button>
-          <a href="checkoutPage.html" class="buy-now">Buy Now</a>
-        </div>
-
-        <div class="delivery-info">
-          <p><strong>Free Delivery</strong><br>Enter your postal code for delivery availability</p>
-          <p><strong>Return Delivery</strong><br>Free 30 Days Delivery Returns. <a href="#">Details</a></p>
-        </div>
-      </div>
-    </div>
-
-    <!-- العناصر المرتبطة -->
-    <div class="related-items">
-      <h2>Related Items</h2>
-      <div class="related-items-container">
-        <div class="related-item">
-          <div class="discount">40% OFF</div>
-          <div class="image-box">
-        <img src="images/img2.png" alt="Havic Gamepad" class="main-image">
-          </div>
-          <h3>HAVIT HV-G92 Gamepad</h3>
-          <button class="add-to-cart">Add To Cart</button>
-          <p class="price"><span class="new">$12.0</span> <span class="old">$20</span></p>
-          <p class="stars">★★★★☆ (88)</p>
-        </div>
-
-        <div class="related-item">
-          <div class="discount">20% OFF</div>
-          <div class="image-box"><img src="images/img1.png" alt="Havic Gamepad" class="main-image">
-          </div>
-          <h3>AK-900 Wired Keyboard</h3>
-          <button class="add-to-cart">Add To Cart</button>
-          <p class="price"><span class="new">$9.60</span> <span class="old">$12</span></p>
-          <p class="stars">★★★★☆ (75)</p>
-        </div>
-
-        <div class="related-item">
-          <div class="discount">30% OFF</div>
-          <div class="image-box"><img src="images/img5.png" alt="Havic Gamepad" class="main-image">
-          </div>
-          <h3>IPS LCD Gaming Monitor</h3>
-          <button class="add-to-cart">Add To Cart</button>
-          <p class="price"><span class="new">$379</span> <span class="old">$400</span></p>
-          <p class="stars">★★★★☆ (93)</p>
-        </div>
-
-        <div class="related-item">
-          <div class="image-box"><img src="images/img4.png" alt="Havic Gamepad" class="main-image">
-          </div>
-          <h3>RGB Liquid CPU Cooler</h3>
-          <button class="add-to-cart">Add To Cart</button>
-          <p class="price"><span class="new">$160</span> <span class="old">$170</span></p>
-          <p class="stars">★★★★☆ (65)</p>
+          <a href="./Checkout.html" class="buy-now">Buy Now</a>
         </div>
       </div>
     </div>
