Finalize Cart and CheckOut Pages

--- a/pages/admin/orders.html
+++ b/pages/admin/orders.html
@@ -59,6 +59,7 @@
             </tbody>
           </table>
         </div>
+        <!-- Pagination will be added here dynamically -->
       </div>
     </main>
   </div>
@@ -66,5 +67,6 @@
   <script type="module" src="/js/orders.js"></script>
 </body>
 </html>
+
 
 
