--- a/pages/cart.html
+++ b/pages/cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Product & Cart Page</title>
+  <title>Shopping Cart</title>
   <link rel="stylesheet" href="../product_cart.css" />
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -18,8 +18,15 @@
   <header id="header"></header>
 
   <div class="page-wrapper">
-    <div class="cart-container" id="cart-container"></div>
-    <div class="cart-total" id="cart-total"></div>
+    <div class="cart-container" id="cart-container">
+      <!-- Cart items will be loaded dynamically -->
+    </div>
+    
+    <div class="cart-bottom">
+      <div class="cart-total" id="cart-total">
+        <!-- Cart total will be loaded dynamically -->
+      </div>
+    </div>
   </div>
 </body>
 </html>
