--- a/pages/product.html
+++ b/pages/product.html
@@ -5,6 +5,8 @@
   <title>Product Page</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="../productPage.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <script src="/js/productsAction.js" type="module"></script>
 </head>
 <body>
@@ -13,15 +15,15 @@
     
     <div class="product-container">
       <div class="product-image">
-        <img src="images/productItem.png" alt="Havic Gamepad" class="main-image">
+        <img src="" alt="" class="main-image">
       </div>
 
       <div class="product-info">
-        <h1>Havic HV G-92 Gamepad</h1>
+        <h1></h1>
 
-        <div class="product-price">$192.00</div>
+        <div class="product-price"></div>
         <p class="product-description">
-          PlayStation 5 Controller Skin High quality vinyl with air channel adhesive for easy bubble free install & mess free removal. Pressure sensitive.
+          
         </p>
 
 
@@ -29,7 +31,7 @@
 
         <div class="quantity-buy">
           <button class="decrement">-</button>
-          <input type="text" value="2">
+          <input id="quan" type="text" value="2">
           <button class="increment">+</button>
           <a href="./Checkout.html" class="buy-now">Buy Now</a>
         </div>
